we need to comment out the redefinition of the $ function, for some reason win32 is  hanging up on it for now.. fixed fonts in win32

--- a/public/index.css
+++ b/public/index.css
@@ -6,7 +6,7 @@ a
 
 body 
 {
-	font-family: "Lucida Sans";
+	font-family: "Lucida Sans", Verdana, sans-serif;
 	font-size: 12px;
 	cursor: default;
 	overflow: hidden;
