added a custom drag handler so it works better in win32

--- a/public/index.css
+++ b/public/index.css
@@ -97,7 +97,7 @@ html
 	text-align: center;
 	background-color: transparent;
 	color: #50741c;
-	text-shadow: rgb(0, 0, 0) 2px 2px 8px;	
+	text-shadow: rgb(0, 0, 0) 2px 2px 8px;
 }
 
 #mediaControls
@@ -483,6 +483,12 @@ input[type=password]:focus {
 	background-image: url('images/player/ne.png');
 	background-repeat: no-repeat;
 }
+
+body.win32 #ne
+{
+	background-image: url('images/player/win_ne.png');
+}
+
 #nw
 {
 	position: fixed;
@@ -494,6 +500,12 @@ input[type=password]:focus {
 	background-image: url('images/player/nw.png');
 	background-repeat: no-repeat;
 }
+
+body.win32 #nw
+{
+	background-image: url('images/player/win_nw.png');
+}
+
 #se
 {
 	position: fixed;
@@ -505,6 +517,12 @@ input[type=password]:focus {
 	background-image: url('images/player/se.png');
 	background-repeat: no-repeat;
 }
+
+body.win32 #se
+{
+	background-image: url('images/player/win_se.png');
+}
+
 #sw
 {
 	position: fixed;
@@ -515,5 +533,10 @@ input[type=password]:focus {
 	
 	background-image: url('images/player/sw.png');
 	background-repeat: no-repeat;
+}
+
+body.win32 #sw
+{
+	background-image: url('images/player/win_sw.png');
 }
 
